test: implement 30 core tests for analysis API, services, and engine