@@ -7,52 +7,50 @@ import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
 
 @Component
-public class MaturityRiskRule implements RiskRule{
+public class MaturityRiskRule implements RiskRule {
 
-    private static final double WEIGHT = 0.10;
+    private static final double WEIGHT = 0.05;
 
     @Override
     public RuleResult evaluate(ScoringContext context) {
         LocalDate dueDate = context.nfeData().getDataVencimento();
 
         if (dueDate == null) {
-            return RuleResult.of(
-                    getName(), "liquidity_risk", 0.4, WEIGHT, "INCREASE", "Data de vencimento não identificada na NF-e.", "NFE_DATA"
-            );
+            return RuleResult.of(getName(), "liquidity_risk", 0.40, WEIGHT, "INCREASE",
+                    "Data de vencimento não identificada na NF-e.", "NFE_DATA");
         }
 
         long daysUntilDue = ChronoUnit.DAYS.between(LocalDate.now(), dueDate);
-
         double score;
         String explanation;
 
         if (daysUntilDue < 0) {
-            score = 1.0;
-            explanation = String.format("NF-e vencida há %d dia(s) — antecipação inviável.", Math.abs(daysUntilDue));
+            score       = 1.0;
+            explanation = "NF-e vencida há %d dia(s) — antecipação inviável.".formatted(Math.abs(daysUntilDue));
         } else if (daysUntilDue <= 3) {
-            score = 0.85;
-            explanation = String.format("Vencimento em %d dia(s) — margem de cobrança insuficiente.\", daysUntilDue");
+            score       = 0.85;
+            explanation = "Vencimento em %d dia(s) — margem de cobrança insuficiente.".formatted(daysUntilDue);
         } else if (daysUntilDue <= 7) {
-            score = 0.60;
-            explanation = String.format("Vencimento em %d dias — prazo curto para cobrança.\", daysUntilDue");
+            score       = 0.60;
+            explanation = "Vencimento em %d dias — prazo curto para cobrança.".formatted(daysUntilDue);
         } else if (daysUntilDue <= 15) {
-            score = 0.30;
-            explanation = String.format("Vencimento em %d dias — prazo aceitável com atenção.", daysUntilDue);
+            score       = 0.30;
+            explanation = "Vencimento em %d dias — prazo aceitável com atenção.".formatted(daysUntilDue);
         } else if (daysUntilDue <= 90) {
-            score = 0.0;
-            explanation = String.format("Vencimento em %d dias — prazo ideal para antecipação.", daysUntilDue);
+            score       = 0.0;
+            explanation = "Vencimento em %d dias — prazo ideal para antecipação.".formatted(daysUntilDue);
         } else {
-            score = 0.15;
-            explanation =  String.format("Vencimento em %d dias — exposição longa ao risco de crédito.", daysUntilDue);
+            score       = 0.15;
+            explanation = "Vencimento em %d dias — exposição longa ao risco de crédito.".formatted(daysUntilDue);
         }
 
-        return RuleResult.of(
-                getName(), "liquidity_risk", score, WEIGHT, score > 0.0 ? "INCREASE" : "DECREASE", explanation, "NFE_DATA"
-        );
+        String direction = score > 0.0 ? "INCREASE" : "DECREASE";
+        return RuleResult.of(getName(), "liquidity_risk", score, WEIGHT, direction, explanation, "NFE_DATA");
     }
 
     @Override
-    public String getName() {
-        return "";
-    }
+    public String getName() { return "maturity_risk"; }
+
+    @Override
+    public double getWeight() { return WEIGHT; }
 }
